--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     });
 }
 function remind(){
-    const notification = new Notification("Look at something +6 meters away, for +20 seconds.");
+    const notification = new Notification("Look at something +6 meters away, for +20 seconds.",{'icon':'eye-icon.png'});
     setTimeout(remind, 1200000);
 }
 
